--- a/index.html
+++ b/index.html
@@ -8,299 +8,277 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Inter',sans-serif;
-}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  background:#000;
-  color:#fff;
-  overflow-x:hidden;
+    font-family:'Inter',sans-serif;
+    background:#000;
+    color:#fff;
+    overflow-x:hidden;
 }
 
-/* ================= HEADER ================= */
+/* ===== FONDO GLOW ===== */
+.bg{
+    position:fixed;
+    inset:-30%;
+    background:
+      radial-gradient(800px 500px at 20% 30%,rgba(0,255,200,.18),transparent 60%),
+      radial-gradient(900px 600px at 80% 70%,rgba(0,120,255,.15),transparent 60%);
+    filter:blur(80px);
+    z-index:-2;
+}
+
+/* ===== HEADER ===== */
 header{
-  position:fixed;
-  top:0;
-  width:100%;
-  height:72px;
-  background:rgba(0,0,0,.82);
-  backdrop-filter:blur(14px);
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:0 42px;
-  z-index:1000;
-  border-bottom:1px solid rgba(255,255,255,.05);
+    position:fixed;
+    top:0;
+    width:100%;
+    height:80px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:0 40px;
+    background:rgba(0,0,0,.55);
+    backdrop-filter:blur(12px);
+    z-index:100;
 }
 
 .logo{
-  display:flex;
-  align-items:center;
-  gap:14px;
+    display:flex;
+    align-items:center;
+    gap:12px;
 }
-
 .logo img{
-  height:38px;
+    width:40px;
 }
-
 .logo span{
-  font-weight:600;
-  letter-spacing:.22em;
-  font-size:12px;
-  opacity:.9;
+    font-weight:700;
+    letter-spacing:3px;
 }
 
+nav{
+    display:flex;
+    gap:35px;
+    font-size:14px;
+    letter-spacing:2px;
+}
 nav a{
-  margin-left:30px;
-  text-decoration:none;
-  color:#999;
-  font-size:13px;
-  letter-spacing:.18em;
-  transition:.3s;
+    color:#aaa;
+    text-decoration:none;
+    transition:.3s;
 }
+nav a:hover{color:#fff}
 
-nav a:hover{
-  color:#fff;
+/* ===== CARRITO ICONO ===== */
+.cart{
+    position:fixed;
+    right:20px;
+    top:50%;
+    transform:translateY(-50%);
+    width:55px;
+    height:55px;
+    border-radius:50%;
+    background:#fff;
+    color:#000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:22px;
+    cursor:pointer;
+    box-shadow:0 0 25px rgba(255,255,255,.4);
+    z-index:99;
 }
+.cart:hover{transform:translateY(-50%) scale(1.1)}
 
-/* ================= HERO ================= */
+/* ===== HERO ===== */
 .hero{
-  min-height:100vh;
-  padding:150px 42px 100px;
-  display:flex;
-  align-items:center;
-  position:relative;
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    padding:120px 8vw 80px;
+    position:relative;
 }
 
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    radial-gradient(circle at center, rgba(0,255,200,.08), transparent 60%),
-    url("logo.jpg") center/55% no-repeat;
-  opacity:.22;
-  filter:blur(1.5px);
-}
-
-.hero::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(to bottom, transparent 0%, #000 85%);
-}
-
-.hero-content{
-  position:relative;
-  max-width:560px;
-  z-index:2;
-}
-
-.hero small{
-  letter-spacing:.35em;
-  font-size:12px;
-  color:#aaa;
+.hero-card{
+    max-width:520px;
+    background:rgba(255,255,255,.06);
+    backdrop-filter:blur(16px);
+    padding:50px;
+    border-radius:28px;
+    animation:fadeUp 1.2s ease forwards;
 }
 
 .hero h1{
-  font-size:68px;
-  font-weight:800;
-  line-height:1.02;
-  margin:18px 0;
+    font-size:64px;
+    font-weight:800;
+    line-height:1;
+    margin-bottom:20px;
 }
 
 .hero p{
-  font-size:16px;
-  color:#ccc;
-  line-height:1.65;
-  max-width:460px;
+    color:#ccc;
+    font-size:16px;
+    margin-bottom:30px;
 }
 
-.hero-buttons{
-  margin-top:36px;
-  display:flex;
-  gap:18px;
-  flex-wrap:wrap;
+.actions{
+    display:flex;
+    flex-direction:column;
+    gap:15px;
 }
 
-.btn{
-  padding:15px 28px;
-  border-radius:16px;
-  font-size:13px;
-  letter-spacing:.18em;
-  cursor:pointer;
-  transition:.35s;
+.actions a{
+    padding:16px 22px;
+    border-radius:14px;
+    text-decoration:none;
+    text-align:center;
+    font-weight:600;
+    letter-spacing:2px;
 }
 
-.btn-primary{
-  background:#fff;
-  color:#000;
-  border:none;
+.btn-main{
+    background:#fff;
+    color:#000;
+}
+.btn-alt{
+    border:1px solid rgba(255,255,255,.3);
+    color:#fff;
 }
 
-.btn-primary:hover{
-  transform:translateY(-3px);
-  box-shadow:0 12px 30px rgba(255,255,255,.15);
+/* ===== LOGO GIGANTE ===== */
+.logo-bg{
+    position:absolute;
+    right:-10%;
+    top:10%;
+    width:550px;
+    opacity:.08;
+    filter:blur(1px);
+    animation:float 8s ease-in-out infinite;
 }
 
-.btn-outline{
-  background:transparent;
-  border:1px solid #444;
-  color:#fff;
+/* ===== EXCLUSIVE ===== */
+.exclusive{
+    padding:120px 8vw;
 }
 
-.btn-outline:hover{
-  border-color:#fff;
+.exclusive h2{
+    font-size:52px;
+    letter-spacing:12px;
+    margin-bottom:20px;
 }
 
-/* ================= BADGE ================= */
-.badge{
-  position:fixed;
-  bottom:26px;
-  right:26px;
-  background:#fff;
-  color:#000;
-  padding:13px 20px;
-  border-radius:999px;
-  font-size:13px;
-  font-weight:600;
-  display:flex;
-  align-items:center;
-  gap:8px;
-  box-shadow:0 12px 40px rgba(0,0,0,.45);
-  z-index:999;
+.exclusive p{
+    color:#aaa;
+    margin-bottom:60px;
 }
 
-/* ================= SECTIONS ================= */
-section{
-  padding:120px 42px;
+.grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+    gap:30px;
 }
 
-.section-title{
-  font-size:52px;
-  font-weight:800;
-  letter-spacing:.28em;
-  margin-bottom:14px;
+.card{
+    position:relative;
+    border-radius:22px;
+    overflow:hidden;
+    background:#111;
+    transform:translateY(40px);
+    opacity:0;
+    animation:fadeUp .8s ease forwards;
+}
+.card:nth-child(2){animation-delay:.2s}
+.card:nth-child(3){animation-delay:.4s}
+.card:nth-child(4){animation-delay:.6s}
+
+.card img{
+    width:100%;
+    display:block;
+    transition:.6s;
+}
+.card:hover img{
+    transform:scale(1.1);
 }
 
-.section-sub{
-  color:#777;
-  font-size:14px;
-  margin-bottom:46px;
+.card span{
+    position:absolute;
+    bottom:20px;
+    left:20px;
+    font-weight:600;
+    letter-spacing:3px;
 }
 
-/* ================= EXCLUSIVE ================= */
-.exclusive-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
-  gap:32px;
+/* ===== DESCUENTO ===== */
+.promo{
+    position:fixed;
+    bottom:30px;
+    right:30px;
+    background:#fff;
+    color:#000;
+    padding:14px 20px;
+    border-radius:40px;
+    font-weight:700;
+    box-shadow:0 0 30px rgba(255,255,255,.6);
 }
 
-.exclusive-item{
-  background:#0f0f0f;
-  border-radius:22px;
-  overflow:hidden;
-  position:relative;
-  transform:translateY(60px);
-  opacity:0;
-  transition:1s cubic-bezier(.16,.84,.44,1);
+/* ===== ANIMACIONES ===== */
+@keyframes fadeUp{
+    to{transform:none;opacity:1}
 }
-
-.exclusive-item.show{
-  transform:translateY(0);
-  opacity:1;
-}
-
-.exclusive-item img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:.7s;
-}
-
-.exclusive-item:hover img{
-  transform:scale(1.1);
-}
-
-.exclusive-item::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(to top, rgba(0,0,0,.6), transparent 60%);
-}
-
-.exclusive-label{
-  position:absolute;
-  bottom:18px;
-  left:18px;
-  font-size:12px;
-  letter-spacing:.22em;
-  background:rgba(0,0,0,.6);
-  padding:9px 16px;
-  border-radius:999px;
-  z-index:2;
+@keyframes float{
+    0%,100%{transform:translateY(0)}
+    50%{transform:translateY(-25px)}
 }
 </style>
 </head>
 
 <body>
+<div class="bg"></div>
 
 <header>
-  <div class="logo">
-    <img src="logo.jpg" alt="Miranda Flow">
-    <span>BOUTIQUE MIRANDA FLOW</span>
-  </div>
-  <nav>
-    <a href="index.html">INICIO</a>
-    <a href="tienda.html">TIENDA</a>
-    <a href="carrito.html">CARRITO</a>
-  </nav>
+    <div class="logo">
+        <img src="logo.jpg">
+        <span>BOUTIQUE · MIRANDA FLOW</span>
+    </div>
+    <nav>
+        <a href="index.html">INICIO</a>
+        <a href="tienda.html">TIENDA</a>
+    </nav>
 </header>
 
+<a href="carrito.html" class="cart">🛒</a>
+
 <section class="hero">
-  <div class="hero-content">
-    <small>BOUTIQUE · PRESENCIA · NIVEL</small>
-    <h1>MIRANDA<br>FLOW</h1>
-    <p>
-      Prendas con presencia.  
-      Estilo que se impone sin hablar.  
-      Esto no es una tienda, es la entrada a un ecosistema.
-    </p>
+    <img src="logo.jpg" class="logo-bg">
 
-    <div class="hero-buttons">
-      <a href="prendas.html"><button class="btn btn-primary">ENTRAR A PRENDAS →</button></a>
-      <button class="btn btn-outline" onclick="document.getElementById('exclusive').scrollIntoView({behavior:'smooth'})">VER EXCLUSIVE ↓</button>
+    <div class="hero-card">
+        <h1>MIRANDA<br>FLOW</h1>
+        <p>
+            Prendas con presencia.<br>
+            Estilo que se impone sin hablar.<br><br>
+            Esto no es una tienda.<br>
+            Es la entrada a un ecosistema.
+        </p>
+
+        <div class="actions">
+            <a href="prendas.html" class="btn-main">ENTRAR A PRENDAS →</a>
+            <a href="#exclusive" class="btn-alt">VER EXCLUSIVE ↓</a>
+        </div>
     </div>
-  </div>
 </section>
 
-<section id="exclusive">
-  <div class="section-title">EXCLUSIVE</div>
-  <div class="section-sub">Drop visual de muestra. Demo con presencia real.</div>
+<section class="exclusive" id="exclusive">
+    <h2>EXCLUSIVE</h2>
+    <p>Drop visual de muestra. No productos. Presencia.</p>
 
-  <div class="exclusive-grid">
-    <div class="exclusive-item"><img src="exclusive-1.jpg"><div class="exclusive-label">EXCLUSIVE</div></div>
-    <div class="exclusive-item"><img src="exclusive-2.jpg"><div class="exclusive-label">EXCLUSIVE</div></div>
-    <div class="exclusive-item"><img src="exclusive-3.jpg"><div class="exclusive-label">EXCLUSIVE</div></div>
-    <div class="exclusive-item"><img src="exclusive-4.jpg"><div class="exclusive-label">EXCLUSIVE</div></div>
-  </div>
+    <div class="grid">
+        <div class="card"><img src="exclusive-1.jpg"><span>EXCLUSIVE I</span></div>
+        <div class="card"><img src="exclusive-2.jpg"><span>EXCLUSIVE II</span></div>
+        <div class="card"><img src="exclusive-3.jpg"><span>EXCLUSIVE III</span></div>
+        <div class="card"><img src="exclusive-4.jpg"><span>EXCLUSIVE IV</span></div>
+    </div>
 </section>
 
-<div class="badge">🎁 -20% HOY</div>
-
-<script>
-const items=document.querySelectorAll('.exclusive-item');
-const reveal=()=>items.forEach(i=>{
-  const top=i.getBoundingClientRect().top;
-  if(top<window.innerHeight-100)i.classList.add('show');
-});
-window.addEventListener('scroll',reveal);
-reveal();
-</script>
+<div class="promo">🎁 -20% HOY</div>
 
 </body>
 </html>
