--- a/prendas.html
+++ b/prendas.html
@@ -2,180 +2,148 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Prendas | Miranda Flow</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family:'Inter',sans-serif;
-  background:#000;
-  color:#fff;
+    font-family:'Inter',sans-serif;
+    background:#000;
+    color:#fff;
+    overflow-x:hidden;
 }
 
-/* HEADER */
+/* ===== FONDO ===== */
+.bg{
+    position:fixed;
+    inset:-30%;
+    background:
+      radial-gradient(800px 500px at 20% 30%,rgba(0,255,200,.15),transparent 60%),
+      radial-gradient(900px 600px at 80% 70%,rgba(0,120,255,.12),transparent 60%);
+    filter:blur(90px);
+    z-index:-1;
+}
+
+/* ===== HEADER ===== */
 header{
-  position:fixed;
-  top:0;left:0;right:0;
-  height:70px;
-  padding:0 22px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:rgba(0,0,0,.6);
-  backdrop-filter:blur(14px);
-  border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:1000;
+    position:fixed;
+    top:0;
+    width:100%;
+    height:80px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:0 40px;
+    background:rgba(0,0,0,.6);
+    backdrop-filter:blur(12px);
+    z-index:10;
 }
-.brand{
-  display:flex;
-  align-items:center;
-  gap:12px;
+
+.logo{
+    display:flex;
+    align-items:center;
+    gap:12px;
 }
-.brand img{
-  width:36px;
-  border-radius:8px;
+.logo img{width:38px}
+.logo span{
+    font-weight:700;
+    letter-spacing:3px;
 }
-.brand .text{
-  font-size:12px;
-  letter-spacing:3px;
-}
-.brand .text b{
-  display:block;
-  font-size:14px;
-  letter-spacing:4px;
+
+nav{
+    display:flex;
+    gap:30px;
+    font-size:14px;
+    letter-spacing:2px;
 }
 nav a{
-  margin-left:22px;
-  text-decoration:none;
-  color:rgba(255,255,255,.7);
-  font-size:12px;
-  letter-spacing:3px;
+    color:#aaa;
+    text-decoration:none;
 }
 nav a:hover{color:#fff}
 
-/* HERO */
+/* ===== VOLVER ===== */
+.back{
+    position:fixed;
+    left:20px;
+    top:100px;
+    font-size:20px;
+    color:#fff;
+    text-decoration:none;
+    opacity:.7;
+}
+.back:hover{opacity:1}
+
+/* ===== HERO ===== */
 .hero{
-  padding:120px 8% 60px;
+    padding:160px 8vw 80px;
 }
+
 .hero h1{
-  font-size:clamp(42px,6vw,80px);
-  letter-spacing:10px;
+    font-size:70px;
+    font-weight:800;
+    letter-spacing:10px;
 }
+
 .hero p{
-  margin-top:10px;
-  color:rgba(255,255,255,.65);
-  font-size:18px;
-  max-width:600px;
+    margin-top:20px;
+    color:#aaa;
+    max-width:520px;
 }
 
-/* GRID */
+/* ===== GRID PRENDAS ===== */
 .grid{
-  padding:40px 8% 80px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:26px;
-}
-.block{
-  position:relative;
-  height:360px;
-  border-radius:28px;
-  overflow:hidden;
-  background:#111;
-  border:1px solid rgba(255,255,255,.1);
-  cursor:pointer;
-  transform:translateY(30px);
-  opacity:0;
-  filter:blur(6px);
-  transition:.8s ease;
-}
-.block.show{
-  transform:none;
-  opacity:1;
-  filter:none;
-}
-.block img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  opacity:.85;
-}
-.block::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(to top,rgba(0,0,0,.85),transparent);
-}
-.block span{
-  position:absolute;
-  bottom:22px;
-  left:22px;
-  font-size:18px;
-  letter-spacing:6px;
-  font-weight:800;
+    padding:60px 8vw 120px;
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    gap:40px;
 }
 
-/* FOOTER */
-footer{
-  padding:40px;
-  text-align:center;
-  color:rgba(255,255,255,.35);
-  font-size:12px;
-  letter-spacing:2px;
+.card{
+    position:relative;
+    border-radius:28px;
+    overflow:hidden;
+    background:#111;
+    height:340px;
+    cursor:pointer;
+    transform:translateY(40px);
+    opacity:0;
+    animation:fadeUp .9s ease forwards;
 }
-</style>
-</head>
 
-<body>
+.card:nth-child(2){animation-delay:.2s}
+.card:nth-child(3){animation-delay:.4s}
+.card:nth-child(4){animation-delay:.6s}
 
-<header>
-  <div class="brand">
-    <img src="logo.jpg">
-    <div class="text">
-      <b>BOUTIQUE</b>
-      MIRANDA FLOW
-    </div>
-  </div>
-  <nav>
-    <a href="index.html">INICIO</a>
-    <a href="producto.html">TIENDA</a>
-    <a href="carrito.html">CARRITO</a>
-  </nav>
-</header>
+.card img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    opacity:.85;
+    transition:.6s;
+}
 
-<section class="hero">
-  <h1>PRÉNDAS</h1>
-  <p>
-    Categorías que abren universos.  
-    Cada bloque es una puerta a una colección.
-  </p>
-</section>
+.card:hover img{
+    transform:scale(1.1);
+    opacity:1;
+}
 
-<section class="grid">
-  <div class="block"><img src="exclusive-1.jpg"><span>RELOJES</span></div>
-  <div class="block"><img src="exclusive-2.jpg"><span>CADENAS</span></div>
-  <div class="block"><img src="exclusive-3.jpg"><span>ANILLOS</span></div>
-  <div class="block"><img src="exclusive-4.jpg"><span>ACCESORIOS</span></div>
-</section>
+.card span{
+    position:absolute;
+    bottom:30px;
+    left:30px;
+    font-size:26px;
+    font-weight:700;
+    letter-spacing:4px;
+}
 
-<footer>
-  © 2025 Miranda Flow Boutique
-</footer>
-
-<script>
-const blocks=document.querySelectorAll('.block');
-const io=new IntersectionObserver(e=>{
-  e.forEach(x=>{
-    if(x.isIntersecting){
-      x.target.classList.add('show');
-      io.unobserve(x.target);
-    }
-  })
-},{threshold:.2});
-blocks.forEach(b=>io.observe(b));
-</script>
-
-</body>
-</html>
+.card small{
+    position:absolute;
+    bottom:10px;
+    left:30px;
+    color:#bbb;
+    letter-spacing:2px;
+    font-size:12
