--- a/index.html
+++ b/index.html
@@ -8,38 +8,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
-
-html{
-  scroll-behavior:smooth;
-}
-
+*{margin:0;padding:0;box-sizing:border-box}
+html{scroll-behavior:smooth}
 body{
-  font-family:'Inter',system-ui,-apple-system;
+  font-family:'Inter',system-ui;
   background:#000;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== BACKGROUND LOGO ===== */
+/* ===== LOGO FONDO ===== */
 .bg-logo{
   position:fixed;
-  inset:-30%;
-  background:url('logo.jpg') center/600px no-repeat;
-  opacity:0.16;
-  filter:blur(10px);
-  animation:floatLogo 22s ease-in-out infinite;
+  inset:-25%;
+  background:url('logo.jpg') center/520px no-repeat;
+  opacity:.22;
+  filter:blur(6px);
+  animation:logoPulse 8s ease-in-out infinite;
   z-index:-2;
 }
-
-@keyframes floatLogo{
-  0%{transform:translateY(0)}
-  50%{transform:translateY(-30px)}
-  100%{transform:translateY(0)}
+@keyframes logoPulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.04)}
+  100%{transform:scale(1)}
 }
 
 /* ===== HEADER ===== */
@@ -48,60 +39,51 @@ header{
   top:0;
   left:0;
   width:100%;
-  padding:18px 28px;
+  padding:18px 26px;
   display:flex;
   justify-content:space-between;
   align-items:center;
   backdrop-filter:blur(16px);
-  background:rgba(0,0,0,0.45);
-  border-bottom:1px solid rgba(255,255,255,0.08);
+  background:rgba(0,0,0,.45);
+  border-bottom:1px solid rgba(255,255,255,.08);
   z-index:100;
 }
-
 .brand{
   display:flex;
   align-items:center;
   gap:14px;
 }
-
 .brand img{
   width:42px;
   height:42px;
   border-radius:10px;
 }
-
 .brand span{
-  font-weight:600;
   letter-spacing:2px;
   font-size:13px;
   opacity:.9;
+  font-weight:600;
 }
-
 nav{
   display:flex;
-  gap:28px;
+  gap:26px;
 }
-
 nav a{
   text-decoration:none;
   color:#fff;
   font-size:14px;
   letter-spacing:2px;
-  opacity:.75;
-  transition:.3s;
+  opacity:.7;
 }
+nav a:hover{opacity:1}
 
-nav a:hover{
-  opacity:1;
-}
-
-/* ===== CART ===== */
+/* ===== CARRITO ===== */
 .cart{
   position:fixed;
-  top:78px; /* más abajo como pediste */
-  right:18px;
-  width:46px;
-  height:46px;
+  top:96px;
+  right:20px;
+  width:38px;
+  height:38px;
   border-radius:50%;
   background:rgba(255,255,255,.12);
   border:1px solid rgba(255,255,255,.25);
@@ -109,9 +91,8 @@ nav a:hover{
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:20px;
-  color:#fff;
-  box-shadow:0 0 22px rgba(255,255,255,.18);
+  font-size:16px;
+  box-shadow:0 0 18px rgba(255,255,255,.15);
   z-index:90;
 }
 
@@ -123,7 +104,6 @@ nav a:hover{
   justify-content:center;
   padding:140px 20px 80px;
 }
-
 .card{
   max-width:460px;
   width:100%;
@@ -133,32 +113,27 @@ nav a:hover{
   backdrop-filter:blur(18px);
   border:1px solid rgba(255,255,255,.12);
   box-shadow:0 40px 80px rgba(0,0,0,.7);
-  animation:fadeUp 1.2s ease forwards;
+  animation:fadeUp 1.1s ease forwards;
 }
-
 @keyframes fadeUp{
   from{opacity:0;transform:translateY(40px)}
   to{opacity:1;transform:translateY(0)}
 }
-
 .card h1{
   font-size:44px;
   font-weight:800;
   line-height:1.05;
   margin-bottom:18px;
 }
-
 .card p{
   font-size:15px;
   line-height:1.7;
   opacity:.85;
   margin-bottom:26px;
 }
-
-/* ===== BUTTONS ===== */
 .btn{
   width:100%;
-  padding:14px 18px;
+  padding:14px;
   border-radius:14px;
   font-weight:600;
   font-size:14px;
@@ -167,19 +142,56 @@ nav a:hover{
   cursor:pointer;
   margin-bottom:14px;
 }
-
 .btn-primary{
   background:#fff;
   color:#000;
 }
-
 .btn-secondary{
   background:transparent;
   color:#fff;
   border:1px solid rgba(255,255,255,.3);
 }
 
-/* ===== DISCOUNT ===== */
+/* ===== EXCLUSIVE ===== */
+.exclusive{
+  padding:120px 20px 160px;
+}
+.exclusive h2{
+  text-align:center;
+  font-size:36px;
+  letter-spacing:6px;
+  margin-bottom:16px;
+}
+.exclusive p{
+  text-align:center;
+  opacity:.7;
+  margin-bottom:60px;
+}
+.exclusive-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:30px;
+  max-width:1000px;
+  margin:0 auto;
+}
+.ex-card{
+  background:rgba(255,255,255,.06);
+  border-radius:22px;
+  padding:16px;
+  border:1px solid rgba(255,255,255,.12);
+  transform-style:preserve-3d;
+  transition:.5s;
+}
+.ex-card:hover{
+  transform:translateY(-12px) rotateX(6deg) rotateY(-6deg);
+  box-shadow:0 30px 60px rgba(0,0,0,.8);
+}
+.ex-card img{
+  width:100%;
+  border-radius:16px;
+}
+
+/* ===== DESCUENTO ===== */
 .discount{
   position:fixed;
   bottom:26px;
@@ -192,17 +204,6 @@ nav a:hover{
   font-weight:600;
   box-shadow:0 12px 30px rgba(0,0,0,.6);
 }
-
-/* ===== MOBILE ===== */
-@media(max-width:600px){
-  nav{
-    gap:18px;
-  }
-
-  .card h1{
-    font-size:36px;
-  }
-}
 </style>
 </head>
 
@@ -212,10 +213,9 @@ nav a:hover{
 
 <header>
   <div class="brand">
-    <img src="logo.jpg" alt="Miranda Flow">
+    <img src="logo.jpg">
     <span>BOUTIQUE · MIRANDA FLOW</span>
   </div>
-
   <nav>
     <a href="index.html">Inicio</a>
     <a href="tienda.html">Tienda</a>
@@ -227,20 +227,27 @@ nav a:hover{
 <section class="hero">
   <div class="card">
     <h1>MIRANDA<br>FLOW</h1>
-
     <p>
       Prendas con presencia.<br>
       Esto no es una tienda.<br>
       Es la entrada a un ecosistema.
     </p>
-
     <button class="btn btn-primary" onclick="location.href='prendas.html'">
       ENTRAR A PRENDAS →
     </button>
-
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="document.getElementById('exclusive').scrollIntoView()">
       VER EXCLUSIVE ↓
     </button>
+  </div>
+</section>
+
+<section class="exclusive" id="exclusive">
+  <h2>EXCLUSIVE</h2>
+  <p>Piezas visuales de muestra. Presencia real.</p>
+  <div class="exclusive-grid">
+    <div class="ex-card"><img src="exclusive-1.jpg"></div>
+    <div class="ex-card"><img src="exclusive-2.jpg"></div>
+    <div class="ex-card"><img src="exclusive-3.jpg"></div>
   </div>
 </section>
 
