--- a/index.html
+++ b/index.html
@@ -1,257 +1,272 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Miranda Flow Boutique</title>
+  <meta charset="UTF-8" />
+  <title>Miranda Flow Boutique</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{
-  font-family:'Inter',system-ui;
-  background:#000;
-  color:#fff;
-  overflow-x:hidden;
-}
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-/* ===== LOGO FONDO ===== */
-.bg-logo{
-  position:fixed;
-  inset:-25%;
-  background:url('logo.jpg') center/520px no-repeat;
-  opacity:.22;
-  filter:blur(6px);
-  animation:logoPulse 8s ease-in-out infinite;
-  z-index:-2;
-}
-@keyframes logoPulse{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.04)}
-  100%{transform:scale(1)}
-}
+  <style>
+    *{margin:0;padding:0;box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      font-family:'Inter',system-ui;
+      background:#000;
+      color:#fff;
+      overflow-x:hidden;
+    }
 
-/* ===== HEADER ===== */
-header{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  padding:18px 26px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  backdrop-filter:blur(16px);
-  background:rgba(0,0,0,.45);
-  border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:100;
-}
-.brand{
-  display:flex;
-  align-items:center;
-  gap:14px;
-}
-.brand img{
-  width:42px;
-  height:42px;
-  border-radius:10px;
-}
-.brand span{
-  letter-spacing:2px;
-  font-size:13px;
-  opacity:.9;
-  font-weight:600;
-}
-nav{
-  display:flex;
-  gap:26px;
-}
-nav a{
-  text-decoration:none;
-  color:#fff;
-  font-size:14px;
-  letter-spacing:2px;
-  opacity:.7;
-}
-nav a:hover{opacity:1}
+    /* ===== LOGO DE FONDO (VISIBLE + LATIENDO) ===== */
+    .bg-logo{
+      position:fixed;
+      inset:-20%;
+      background:url('logo.jpg') center/480px no-repeat;
+      opacity:.28;
+      filter:blur(3px);
+      animation:logoPulse 6s ease-in-out infinite;
+      z-index:-2;
+      pointer-events:none;
+    }
 
-/* ===== CARRITO ===== */
-.cart{
-  position:fixed;
-  top:96px;
-  right:20px;
-  width:38px;
-  height:38px;
-  border-radius:50%;
-  background:rgba(255,255,255,.12);
-  border:1px solid rgba(255,255,255,.25);
-  backdrop-filter:blur(12px);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:16px;
-  box-shadow:0 0 18px rgba(255,255,255,.15);
-  z-index:90;
-}
+    @keyframes logoPulse{
+      0%,100%{transform:scale(1)}
+      50%{transform:scale(1.06)}
+    }
 
-/* ===== HERO ===== */
-.hero{
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  padding:140px 20px 80px;
-}
-.card{
-  max-width:460px;
-  width:100%;
-  padding:44px 36px;
-  border-radius:26px;
-  background:rgba(255,255,255,.05);
-  backdrop-filter:blur(18px);
-  border:1px solid rgba(255,255,255,.12);
-  box-shadow:0 40px 80px rgba(0,0,0,.7);
-  animation:fadeUp 1.1s ease forwards;
-}
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(40px)}
-  to{opacity:1;transform:translateY(0)}
-}
-.card h1{
-  font-size:44px;
-  font-weight:800;
-  line-height:1.05;
-  margin-bottom:18px;
-}
-.card p{
-  font-size:15px;
-  line-height:1.7;
-  opacity:.85;
-  margin-bottom:26px;
-}
-.btn{
-  width:100%;
-  padding:14px;
-  border-radius:14px;
-  font-weight:600;
-  font-size:14px;
-  letter-spacing:2px;
-  border:none;
-  cursor:pointer;
-  margin-bottom:14px;
-}
-.btn-primary{
-  background:#fff;
-  color:#000;
-}
-.btn-secondary{
-  background:transparent;
-  color:#fff;
-  border:1px solid rgba(255,255,255,.3);
-}
+    /* ===== HEADER ===== */
+    header{
+      position:sticky;
+      top:0;
+      z-index:50;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:18px 22px;
+      background:rgba(0,0,0,.55);
+      backdrop-filter:blur(18px);
+    }
 
-/* ===== EXCLUSIVE ===== */
-.exclusive{
-  padding:120px 20px 160px;
-}
-.exclusive h2{
-  text-align:center;
-  font-size:36px;
-  letter-spacing:6px;
-  margin-bottom:16px;
-}
-.exclusive p{
-  text-align:center;
-  opacity:.7;
-  margin-bottom:60px;
-}
-.exclusive-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:30px;
-  max-width:1000px;
-  margin:0 auto;
-}
-.ex-card{
-  background:rgba(255,255,255,.06);
-  border-radius:22px;
-  padding:16px;
-  border:1px solid rgba(255,255,255,.12);
-  transform-style:preserve-3d;
-  transition:.5s;
-}
-.ex-card:hover{
-  transform:translateY(-12px) rotateX(6deg) rotateY(-6deg);
-  box-shadow:0 30px 60px rgba(0,0,0,.8);
-}
-.ex-card img{
-  width:100%;
-  border-radius:16px;
-}
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      letter-spacing:.18em;
+      font-size:12px;
+      text-transform:uppercase;
+      font-weight:600;
+      opacity:.9;
+    }
 
-/* ===== DESCUENTO ===== */
-.discount{
-  position:fixed;
-  bottom:26px;
-  right:20px;
-  background:#fff;
-  color:#000;
-  padding:12px 18px;
-  border-radius:40px;
-  font-size:13px;
-  font-weight:600;
-  box-shadow:0 12px 30px rgba(0,0,0,.6);
-}
-</style>
+    .brand img{
+      width:34px;
+      height:34px;
+      border-radius:8px;
+    }
+
+    nav{
+      display:flex;
+      gap:26px;
+      font-size:13px;
+      text-transform:uppercase;
+      letter-spacing:.14em;
+    }
+
+    nav a{
+      color:#fff;
+      text-decoration:none;
+      opacity:.75;
+    }
+
+    nav a:hover{opacity:1}
+
+    /* ===== CARRITO ===== */
+    .cart{
+      position:fixed;
+      top:110px;
+      right:22px;
+      width:36px;
+      height:36px;
+      border-radius:50%;
+      background:rgba(255,255,255,.14);
+      border:1px solid rgba(255,255,255,.28);
+      backdrop-filter:blur(14px);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:15px;
+      box-shadow:0 0 16px rgba(255,255,255,.18);
+      z-index:90;
+      text-decoration:none;
+      color:#fff;
+      touch-action:manipulation;
+      -webkit-tap-highlight-color:transparent;
+    }
+
+    .cart:active{transform:scale(.92)}
+
+    /* ===== HERO ===== */
+    .hero{
+      min-height:88vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:40px 20px;
+    }
+
+    .hero-card{
+      background:rgba(255,255,255,.06);
+      backdrop-filter:blur(24px);
+      border-radius:26px;
+      padding:40px 28px;
+      max-width:420px;
+      width:100%;
+      box-shadow:0 0 60px rgba(0,0,0,.6);
+      animation:fadeUp .9s ease forwards;
+    }
+
+    @keyframes fadeUp{
+      from{opacity:0;transform:translateY(40px)}
+      to{opacity:1;transform:translateY(0)}
+    }
+
+    .hero-card h1{
+      font-size:42px;
+      font-weight:800;
+      line-height:1.05;
+      margin-bottom:16px;
+    }
+
+    .hero-card p{
+      opacity:.75;
+      line-height:1.6;
+      margin-bottom:26px;
+      font-size:15px;
+    }
+
+    .btn{
+      width:100%;
+      padding:16px;
+      border-radius:14px;
+      text-align:center;
+      font-weight:600;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      font-size:12px;
+      margin-bottom:14px;
+      cursor:pointer;
+      text-decoration:none;
+      display:block;
+    }
+
+    .btn-primary{
+      background:#fff;
+      color:#000;
+    }
+
+    .btn-outline{
+      border:1px solid rgba(255,255,255,.35);
+      color:#fff;
+      opacity:.9;
+    }
+
+    /* ===== EXCLUSIVE ===== */
+    .exclusive{
+      padding:90px 20px 120px;
+      max-width:1100px;
+      margin:auto;
+    }
+
+    .exclusive h2{
+      font-size:46px;
+      font-weight:800;
+      letter-spacing:.25em;
+      text-transform:uppercase;
+      margin-bottom:20px;
+    }
+
+    .exclusive p{
+      opacity:.6;
+      max-width:420px;
+    }
+
+    /* ===== PROMO ===== */
+    .promo{
+      position:fixed;
+      bottom:28px;
+      right:22px;
+      background:#fff;
+      color:#000;
+      padding:12px 18px;
+      border-radius:999px;
+      font-size:13px;
+      font-weight:600;
+      box-shadow:0 0 22px rgba(0,0,0,.6);
+      z-index:80;
+    }
+
+    /* ===== RESPONSIVE ===== */
+    @media(min-width:900px){
+      .hero-card{max-width:520px}
+      .hero-card h1{font-size:56px}
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="bg-logo"></div>
+  <div class="bg-logo"></div>
 
-<header>
-  <div class="brand">
-    <img src="logo.jpg">
-    <span>BOUTIQUE · MIRANDA FLOW</span>
-  </div>
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="tienda.html">Tienda</a>
-  </nav>
-</header>
+  <!-- HEADER -->
+  <header>
+    <div class="brand">
+      <img src="logo.jpg" alt="Miranda Flow">
+      <span>Boutique · Miranda Flow</span>
+    </div>
 
-<div class="cart">🛒</div>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="tienda.html">Tienda</a>
+    </nav>
+  </header>
 
-<section class="hero">
-  <div class="card">
-    <h1>MIRANDA<br>FLOW</h1>
+  <!-- CARRITO -->
+  <a href="carrito.html" class="cart" aria-label="Carrito">🛒</a>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-card">
+      <h1>Miranda<br>Flow</h1>
+
+      <p>
+        Prendas con presencia.<br>
+        Esto no es una tienda.<br>
+        Es la entrada a un ecosistema.
+      </p>
+
+      <a href="prendas.html" class="btn btn-primary">
+        Entrar a Prendas →
+      </a>
+
+      <a href="#exclusive" class="btn btn-outline">
+        Ver Exclusive ↓
+      </a>
+    </div>
+  </section>
+
+  <!-- EXCLUSIVE -->
+  <section id="exclusive" class="exclusive">
+    <h2>Exclusive</h2>
     <p>
-      Prendas con presencia.<br>
-      Esto no es una tienda.<br>
-      Es la entrada a un ecosistema.
+      Drop visual de muestra.  
+      Piezas selectas.  
+      Presencia antes que volumen.
     </p>
-    <button class="btn btn-primary" onclick="location.href='prendas.html'">
-      ENTRAR A PRENDAS →
-    </button>
-    <button class="btn btn-secondary" onclick="document.getElementById('exclusive').scrollIntoView()">
-      VER EXCLUSIVE ↓
-    </button>
-  </div>
-</section>
+  </section>
 
-<section class="exclusive" id="exclusive">
-  <h2>EXCLUSIVE</h2>
-  <p>Piezas visuales de muestra. Presencia real.</p>
-  <div class="exclusive-grid">
-    <div class="ex-card"><img src="exclusive-1.jpg"></div>
-    <div class="ex-card"><img src="exclusive-2.jpg"></div>
-    <div class="ex-card"><img src="exclusive-3.jpg"></div>
-  </div>
-</section>
-
-<div class="discount">🎁 -20% HOY</div>
+  <!-- PROMO -->
+  <div class="promo">🎁 -20% HOY</div>
 
 </body>
 </html>
